--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body {
 
 h1 {
     color: #000000;
-    font-family: "Comic Sans MS", cursive, sans-serif
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 p {
     color: #000000;
-    font-family: "Comic Sans MS", cursive, sans-serif
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 button {
     color: #000000;
-    font-family: "Comic Sans MS", cursive, sans-serif
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
